--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
     "react-scripts": "4.0.1",
+    "react-xarrows": "^1.5.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
